syntax = "proto3";

import "common.proto";

message Network {
    string id = 1;
    string name = 2;
    string banner = 3;
    string logo = 4;
    string website = 5;
    Date established = 6;
    string description = 7;
    string studio_id = 8;
    DateTime added_on = 350;
};
